Handling Loops correctly to avoid circular dependencies in java interfaces